# rough-path-signatures-pricing

./: README.md  pyproject.toml  requirements.txt  simulation.ipynb
data/: GBM_Asian_Call.csv  GBM_European_Call.csv  GBM_UI_Barrier_Call.csv  GBM_UO_Barrier_Call.csv  HullWhite_UI_Barrier_Call.csv  JumpDiffusion_Asian_Call.csv  JumpDiffusion_European_Call.csv  JumpDiffusion_UI_Barrier_Call.csv  JumpDiffusion_UO_Barrier_Call.csv  RoughVolatility_Asian_Call.csv  RoughVolatility_European_Call.csv  RoughVolatility_UI_Barrier_Call.csv  RoughVolatility_UO_Barrier_Call.csv  generated_asian_prices.csv  generated_barrier_prices_new.csv  spx_call_put_100strikes.csv
notebooks/: generate_prices.ipynb  simulation.ipynb  test.ipynb
src/rough_path_signatures_pricing/: __init__.py  signature_regressor.py  simulation_models.py
