[project]
name = "rough-path-signatures-pricing"
version = "0.1.0"
description = ""
authors = [
    {name = "chrisdybdahl",email = "chrisdybdahl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "esig (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "rough_path_signatures_pricing"
from = "src"